# Multi-Server-Control-Program

./: .pre-commit-config.yaml  README.md  example_playbook.yaml  main.py  pyproject.toml
src/: config.py  file_parser.py  host_controller.py
tests/: test_file_parser.py
