[project]
name = "multi-server-control-program"
version = "0.1.0"
description = "a multi-server control program"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "paramiko (>=4.0.0,<5.0.0)",
    "click (>=8.3.1,<9.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

